Add css rules for header and body
Added padding to body on left and right. Removed link and list formatting
from lists in header. Added basic flex properties to header.

--- a/style.css
+++ b/style.css
@@ -3,10 +3,28 @@
 body {
     display: flex;
     flex-direction: column;
+    padding: 0px 64px 0px 64px;
 }
 
 
 /*Header Rules*/
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header ul {
+    display: flex;
+    list-style: none;
+    column-gap: 10px;
+}
+
+.header a {
+    text-decoration: none;
+    color: black;
+}
 
 .header-title {
     font-size: 24px;
