--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 body {
     display: flex;
     flex-direction: column;
-    padding: 0px 64px 0px 64px;
 }
 
 
@@ -13,6 +12,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: rgb(66, 66, 99);
 }
 
 .header ul {
