--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 body {
     display: flex;
     flex-direction: column;
+    padding: 0px;
+    margin: 0px;
 }
 
 
@@ -19,6 +21,8 @@ body {
     display: flex;
     list-style: none;
     column-gap: 10px;
+    padding: 0px;
+    margin: 0px;
 }
 
 .header a {
