--- a/style.css
+++ b/style.css
@@ -27,10 +27,12 @@ body {
 
 .header a {
     text-decoration: none;
-    color: black;
+    color: white;
+    font-weight: 600;
 }
 
 .header-title {
     font-size: 24px;
     font-weight: 900;
+    color: white;
 }
