--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/*Variables*/
+:root {
+    --main-padding-size: 32px 64px 32px 64px ;
+}
+
 /*General Rules*/
 
 body {
@@ -5,6 +10,10 @@ body {
     flex-direction: column;
     padding: 0px;
     margin: 0px;
+}
+
+body > * {
+    padding: var(--main-padding-size)
 }
 
 
