--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*Variables*/
 :root {
-    --main-padding-size: 32px 64px 32px 64px ;
+    --main-padding-size: 32px 300px 32px 300px ;
 }
 
 /*General Rules*/
@@ -46,4 +46,11 @@ body > * {
     font-size: 24px;
     font-weight: 900;
     color: white;
+}
+
+/*Greeter Rules*/
+
+.greeter {
+    display: flex;
+    justify-content: space-between;
 }
