Change greeter button colors and border radius

--- a/style.css
+++ b/style.css
@@ -83,4 +83,7 @@ body > * {
     width: 150px;
     font-size: 24px;
     font-weight: 600;
+    background-color: cyan;
+    color: rgb(66, 66, 99);
+    border-radius: 10px;
 }
