--- a/style.css
+++ b/style.css
@@ -98,6 +98,9 @@ body > * {
 .main-title {
     display: flex;
     justify-content: center;
+    font-size: 28px;
+    font-weight: 800;
+    margin-bottom: 32px;
 }
 
 .card-deck {
