Change flex rules for card
Change the rules for card and children so that images don't grow and text
is centered.

--- a/style.css
+++ b/style.css
@@ -110,4 +110,15 @@ body > * {
 
 .card {
     flex: 1;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-img {
+    width: 200px;
+}
+
+.card-text {
+    text-align: center;
 }
