--- a/style.css
+++ b/style.css
@@ -130,3 +130,8 @@ body > * {
     background-color: rgb(209, 216, 231);
     padding: 100px 450px 100px 450px;
 }
+
+.quote {
+    font-size: 24px;
+    font-style: italic;
+}
