--- a/style.css
+++ b/style.css
@@ -132,6 +132,16 @@ body > * {
 }
 
 .quote {
+    
+
     font-size: 24px;
     font-style: italic;
+}
+
+.author {
+    display: flex;
+    justify-content: flex-end;
+
+    font-weight: 800;
+    font-size: 18px;
 }
