--- a/style.css
+++ b/style.css
@@ -131,18 +131,17 @@ body > * {
 
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .quote {
-
+    width: 800px;
 
     font-size: 24px;
     font-style: italic;
 }
 
 .author {
-    display: flex;
-    justify-content: flex-end;
 
     font-weight: 800;
     font-size: 18px;
