--- a/style.css
+++ b/style.css
@@ -136,13 +136,13 @@ body > * {
 
 .quote {
     width: 800px;
-
     font-size: 24px;
     font-style: italic;
 }
 
 .author {
-
+    width: 800px;
+    text-align: right;
     font-weight: 800;
     font-size: 18px;
 }
