--- a/style.css
+++ b/style.css
@@ -135,13 +135,14 @@ body > * {
 }
 
 .quote {
-    width: 800px;
+    flex:auto;
+    max-width: 800px;
     font-size: 24px;
     font-style: italic;
 }
 
 .author {
-    width: 800px;
+    max-width: 800px;
     text-align: right;
     font-weight: 800;
     font-size: 18px;
