--- a/style.css
+++ b/style.css
@@ -131,17 +131,17 @@ body > * {
 
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .quote {
-    flex:auto;
+    align-self: center;
     max-width: 800px;
     font-size: 24px;
     font-style: italic;
 }
 
 .author {
+
     max-width: 800px;
     text-align: right;
     font-weight: 800;
