Add quote-box css rules
Added quote-box rule that handles flexing quote and author. Set a width for
this element as well so quote and author can be aligned. Changed flex rules
for testimonials to reflect this change.

--- a/style.css
+++ b/style.css
@@ -129,11 +129,17 @@ body > * {
 .testimonials {
     background-color: rgb(209, 216, 231);
     display: flex;
+    justify-content: center;
+}
+
+.quote-box {
+    width: 800px;
+    display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .quote {
-    align-self: center;
     font-size: 24px;
     font-style: italic;
 }
