Add flex rules for call-to-action and center it

--- a/style.css
+++ b/style.css
@@ -151,3 +151,10 @@ body > * {
 
     align-self: flex-end;
 }
+
+/*Call To Action Rules*/
+
+.call-to-action {
+    display: flex;
+    justify-content: center;
+}
