Add flex rules for action-text

--- a/style.css
+++ b/style.css
@@ -167,3 +167,8 @@ body > * {
     column-gap: 64px;
     border-radius: 10px;
 }
+
+.action-text {
+    display: flex;
+    flex-direction: column;
+}
