--- a/style.css
+++ b/style.css
@@ -172,3 +172,8 @@ body > * {
     display: flex;
     flex-direction: column;
 }
+
+.action-title {
+    font-size: 20px;
+    font-weight: 600;
+}
