Align items in action box to center

--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ body > * {
 .action-box {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: cyan;
     padding: 32px;
     column-gap: 64px;
