Add background color and padding rules to footer

--- a/style.css
+++ b/style.css
@@ -185,3 +185,11 @@ body > * {
     border-color: black;
     border-radius: 10px;
 }
+
+/*Footer rules*/
+
+.footer {
+    background-color: rgb(66, 66, 99);
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
