--- a/style.css
+++ b/style.css
@@ -192,4 +192,7 @@ body > * {
     background-color: rgb(66, 66, 99);
     padding-top: 16px;
     padding-bottom: 16px;
+
+    display: flex;
+    justify-content: center;
 }
